# Export-It

./: .gitignore  package.json
export-it/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
export-it/backend/: VENDOR.md  pyproject.toml
export-it/backend/api/: __main__.py  dialogs.py  jobs.py  server.py  spotify_auth.py
export-it/backend/csvmusic/: app.py  download_csv.py  fetch_csv.py  match_csv.py  version.py
export-it/backend/csvmusic/core/: __init__.py  browsers.py  config.py  csv_import.py  downloader.py  log.py  models.py  paths.py  pipeline.py  preflight.py  settings.py  spotify_import.py  ytmusic_match.py
export-it/backend/csvmusic/ui/: main_window.py  workers.py
export-it/scripts/: concurrency.js  find_youtube.js  itunes.js  resolve.js  youtube-cache.js  youtube.js  ytdlp.js
export-it/server/: config.js  index.js  youtubeLinks.js
export-it/server/db/: index.js
export-it/server/jobs/: processor.js  queue.js
export-it/server/lib/: ffmpegPath.js  matcher.js  metadata.js  paths.js  spotdlMeta.js  youtube.js  youtubeLinks.js  ytdlp.js
export-it/server/routes/: health.js  jobs.js  playlists.js
export-it/server/services/: preview.js
export-it/src/: App.css  App.jsx  api.js  fontawesome.js  index.css  main.jsx
export-it/src/components/: AlbumCard.jsx  AlternativesModal.jsx  Buttons.jsx  SettingsPanel.jsx  StepNav.jsx
export-it/src/lib/: albumSteps.js  downloadButton.js  errorMessages.js  loadTiming.js  matchLabels.js
export-it/tests/: integration.mjs  itunes.test.js
(+25 files in other folders)
