[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "export-it-backend"
version = "0.1.0"
description = "Export-It backend — CSVMusic core + FastAPI"
requires-python = ">=3.10"
dependencies = [
	"yt-dlp>=2025.1.1",
	"ytmusicapi>=1.7.4",
	"mutagen>=1.47.0",
	"requests>=2.32.0",
	"pandas>=2.2.0",
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.32.0",
	"python-multipart>=0.0.12",
	"python-dotenv>=1.0.0",
	"httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["csvmusic", "csvmusic.core", "api"]

[project.scripts]
export-it-api = "api.server:main"
